--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head> 
 <body> 
 
-<h1 style="color:bisque;">Test Git Code</h1>
+<h1 style="color:bisque;">Test Git Code 2</h1>
 
 </body>
 </html>
